# hpp-timeoptimization

./: CMakeLists.txt  README.md  README.md~
config/: cfg_momSc_demo01.yaml  cfg_momSc_demo01_dyn_results.yaml  cfg_momTr_demo01.yaml  cfg_timeopt_demo01.yaml
demos/: CMakeLists.txt  DemoMomentumopt.cpp
include/hpp/timeopt/: fwd.hh
include/hpp/timeopt/momentumopt/cntopt/: ContactPlanFromFile.hpp  ContactPlanFromFootPrint.hpp  ContactPlanInterface.hpp  ContactState.hpp
include/hpp/timeopt/momentumopt/dynopt/: DynamicsOptimizer.hpp  DynamicsState.hpp  PathExtraction.hpp
include/hpp/timeopt/momentumopt/setting/: Definitions.hpp  Foot-print.hpp  PlannerParams.hpp  PlannerSetting.hpp  Robot-state.hpp
include/hpp/timeopt/momentumopt/utilities/: Clock.hpp  ConversionFrame.hpp
include/hpp/timeopt/opt_solver/interface/: Cone.hpp  Exprs.hpp  Model.hpp  OptVar.hpp  Solver.hpp  SolverParams.hpp  SolverSetting.hpp  Var.hpp
include/hpp/timeopt/opt_solver/optimizer/: EqRoutine.hpp  IPSolver.hpp  InfoPrinter.hpp  LinSolver.hpp  SparseCholesky.hpp
src/: CMakeLists.txt
src/momentumopt/cntopt/: ContactPlanFromFile.cpp  ContactPlanFromFootPrint.cpp  ContactPlanInterface.cpp  ContactState.cpp
src/momentumopt/dynopt/: DynamicsOptimizer.cpp  DynamicsState.cpp  PathExtraction.cpp
src/momentumopt/setting/: PlannerSetting.cpp  Robot-state.cpp
src/opt_solver/interface/: Cone.cpp  Exprs.cpp  Model.cpp  OptVar.cpp  SolverSetting.cpp  Var.cpp
src/opt_solver/optimizer/: EqRoutine.cpp  IPSolver.cpp  InfoPrinter.cpp  LinSolver.cpp  SparseCholesky.cpp
test/momentumopt/: CMakeLists.txt  TestMomentumopt.cpp
test/momentumopt/yaml_config_files/momopt_demos/: cfg_momSc_demo01.yaml  cfg_momSc_demo01.yaml~  cfg_momTr_demo01.yaml
test/momentumopt/yaml_config_files/timeopt_demos/: cfg_timeopt_demo01.yaml
test/opt_solver/: CMakeLists.txt  test_solver.cpp
test/setting/: CMakeLists.txt  robot.cpp
